--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "scripts": {
     "start": "cd server && npm start",
     "dev": "cd server && npm run dev",
-    "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install",
-    "build": "npm run install-server && npm run install-client",
-    "heroku-postbuild": "npm run build"
+    "build": "cd server && npm install --only=production",
+    "postinstall": "cd server && npm install --only=production"
   },
   "keywords": [
     "manipal",
@@ -24,8 +22,9 @@
   ],
   "author": "Manipal Student",
   "license": "MIT",
+  "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/manipal-reddit.git"
+    "url": "https://github.com/RyanGupta16/mitreddit.git"
   }
 }
