FINAL DEPLOYMENT FIX: Simplify build process for Railway
 Simplified root package.json scripts for Railway
 Updated railway.json with new build command
 Removed redundant build steps

This is the final attempt to fix the deployment. The build process is now as simple as possible for Railway to execute.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "start": "cd server && npm start",
+    "start": "node server/src/server.js",
     "dev": "cd server && npm run dev",
-    "build": "cd server && npm install --only=production",
-    "postinstall": "cd server && npm install --only=production"
+    "heroku-postbuild": "cd server && npm install --only=production"
   },
   "keywords": [
     "manipal",
