ULTIMATE DEPLOYMENT FIX: Nixpacks config and simplified build
 REMOVED Procfile to avoid conflicts
 REBUILT nixpacks.toml from scratch to be simple and direct
 REMOVED buildCommand from railway.json to let nixpacks handle it
 INCREASED healthcheck timeout to 120s

This is the most robust and simple configuration. It relies on nixpacks to handle the build process correctly, which should resolve the 'undefined variable npm' error.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,18 +1,15 @@
 # Railway deployment configuration for MIT Manipal Reddit
 [start]
-cmd = "cd server && npm start"
+cmd = "npm start"
 
 [variables]
 NODE_ENV = "production"
 
 [phases.setup]
-nixPackages = ["nodejs", "npm"]
+nixPkgs = ["nodejs", "npm"]
 
 [phases.install] 
-cmds = [
-  "cd server", 
-  "npm ci --only=production --no-optional --silent"
-]
+cmds = ["npm install"]
 
 [phases.build]
-cmds = ["echo 'Build complete'"]
+cmds = ["npm run heroku-postbuild"]
