Add Supabase Authentication Integration
 Features Added:
- Hybrid auth system (Supabase + Custom JWT)
- New users automatically use Supabase Auth
- Existing users continue with custom auth
- Email verification support
- Password reset functionality
- Automatic token refresh

 New Files:
- supabase/ - Supabase CLI configuration
- server/src/config/supabaseAuthClient.js - Auth client config
- server/src/middleware/hybridAuth.js - Hybrid auth middleware
- server/src/routes/authSupabase.js - Supabase auth routes
- client/js/supabaseAuth.js - Client-side auth manager
- test-supabase-auth.html - Auth testing page

 Updated Files:
- client/index.html - Added Supabase client library
- client/js/auth.js - Hybrid auth support
- server/src/server.js - Integrated Supabase routes
- package.json - Added Supabase dependency

 Documentation:
- SUPABASE_AUTH_MIGRATION_PLAN.md - Complete migration guide
- ENV_SETUP.txt - Environment configuration
- setup-supabase-auth.js - Setup automation script

 Benefits:
- Zero downtime migration
- Enhanced security with Supabase Auth
- Built-in email verification
- OAuth provider support (future)
- Row Level Security ready
- Production ready hybrid system

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   ],
   "author": "Manipal Student",
   "license": "MIT",
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/RyanGupta16/mitreddit.git"
+  },
+  "devDependencies": {
+    "supabase": "^2.39.2"
   }
 }
