Configure Vercel Deployment for Supabase Integration
 Updates Made:
- Updated vercel.json for better Supabase compatibility
- Added proper routing for static assets and API endpoints
- Increased Lambda size limit for Supabase dependencies
- Added function timeout configuration
- Created comprehensive Vercel deployment guide

 Deployment Requirements:
- Environment variables need to be added to Vercel dashboard
- Supabase redirect URLs need to include Vercel domain
- All authentication features will work on deployed site

 Configuration:
- Enhanced routing for client assets
- Optimized for serverless functions
- Production-ready settings
- Supabase integration ready

 Documentation:
- VERCEL_DEPLOYMENT_GUIDE.md with step-by-step instructions
- Environment variable configuration
- Troubleshooting guide included

--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "builds": [
     {
       "src": "server/src/server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     },
     {
       "src": "client/**",
-      "use": "@vercel/static",
-      "config": {
-        "distDir": "client"
-      }
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -19,10 +19,19 @@
       "dest": "/server/src/server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|html))",
       "dest": "/client/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/index.html"
     }
   ],
+  "functions": {
+    "server/src/server.js": {
+      "maxDuration": 30
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
